--- a/CAA SAT/SAT.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/CAA SAT/SAT.UI.MVC/Views/Shared/_Layout.cshtml
@@ -86,11 +86,12 @@
 					<div class="nav-item dropdown disabled">
 						<a href="#" class="nav-link" data-bs-toggle="dropdown"><span class="dropdown-toggle">Pages</span></a>
 						<div class="dropdown-menu m-0">
-							<a href="feature.html" class="dropdown-item disabled">Feature</a>
-							<a href="countries.html" class="dropdown-item disabled">Countries</a>
-							<a href="testimonial.html" class="dropdown-item disabled">Testimonial</a>
-							<a href="training.html" class="dropdown-item disabled">Training</a>
-							<a href="404.html" class="dropdown-item disabled">404 Page</a>
+							<a asp-controller="Students" asp-action="Index" class="dropdown-item">Students</a>
+							<a asp-controller="Courses" asp-action="Index" class="dropdown-item">Courses</a>
+							<a asp-controller="Enrollments" asp-action="Index" class="dropdown-item">Enrollments</a>
+							<a asp-controller="ScheduledClasses" asp-action="Index" class="dropdown-item">Scheduled Classes</a>
+							<a asp-controller="StudentStatus" asp-action="Index" class="dropdown-item">Student Status</a>
+							<a asp-controller="ScheduledClassStatus" asp-action="Index" class="dropdown-item">Scheduled Class Status</a>
 						</div>
 					</div>
 					<a href="contact.html" class="nav-item nav-link disabled">Contact</a>
