--- a/CAA SAT/SAT.UI.MVC/Views/ScheduledClasses/Index.cshtml
+++ b/CAA SAT/SAT.UI.MVC/Views/ScheduledClasses/Index.cshtml
@@ -1,65 +1,47 @@
 ﻿@model IEnumerable<SAT.Data.EF.Models.ScheduledClass>
 
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.StartDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EndDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InstructorName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Location)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Course)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Scs)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InstructorName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.CourseDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Scs.Scname)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ScheduledClassId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ScheduledClassId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ScheduledClassId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.FullCourseName)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.GetEnumerator().Current.InstructorName)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.GetEnumerator().Current.Scs.Scname)
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach(var item in Model) {
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.FullCourseName)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.InstructorName)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Scs.Scname)
+				</td>
+				<td>
+					<a asp-action="Edit" asp-route-id="@item.ScheduledClassId">Edit</a> |
+					<a asp-action="Details" asp-route-id="@item.ScheduledClassId">Details</a> |
+					<a asp-action="Delete" asp-route-id="@item.ScheduledClassId">Delete</a>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
