--- a/CAA SAT/SAT.UI.MVC/Views/Students/Details.cshtml
+++ b/CAA SAT/SAT.UI.MVC/Views/Students/Details.cshtml
@@ -1,78 +1,77 @@
 ﻿@model SAT.Data.EF.Models.Student
 
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Student</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Major)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Major)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.City)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.State)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.State)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ZipCode)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ZipCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhotoUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhotoUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ss)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ss.Ssname)
-        </dd>
-    </dl>
+	<h4>Student</h4>
+	<hr />
+	<dl class="row">
+		<div class="col-sm-6">
+			<img src="~/img/Clown/@Model.PhotoUrl" alt="@Model.FullName Image" />
+		</div>
+		<div class="col-sm-6">
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.FullName)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.FullName)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Major)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Major)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Address)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Address)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.City)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.City)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.State)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.State)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.ZipCode)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.ZipCode)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Phone)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Phone)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Email)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Email)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Ss)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Ss.Ssname)
+			</dd>
+		</div>
+	</dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.StudentId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Edit" asp-route-id="@Model?.StudentId">Edit</a> |
+	<a asp-action="Index">Back to List</a>
 </div>
