--- a/CAA SAT/SAT.UI.MVC/Views/Students/Delete.cshtml
+++ b/CAA SAT/SAT.UI.MVC/Views/Students/Delete.cshtml
@@ -1,81 +1,65 @@
 ﻿@model SAT.Data.EF.Models.Student
 
 @{
-    ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Major)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Major)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.City)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.State)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.State)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ZipCode)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ZipCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhotoUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhotoUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ss)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ss.Ssname)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="StudentId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+	<h4>Student</h4>
+	<hr />
+	<dl class="row">
+		<div class="offset-3 col-6">
+
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.FullName)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.FullName)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Major)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Major)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Email)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Email)
+			</dd>
+			<dt class="col-sm-2">
+				@Html.DisplayNameFor(model => model.Ss)
+			</dt>
+			<dd class="col-sm-10">
+				@Html.DisplayFor(model => model.Ss.Ssname)
+			</dd>
+
+			<form asp-action="Delete" asp-route-id=@Model.StudentId>
+				<input type="hidden" asp-for="StudentId" />
+
+				<div class="form-group">
+					<label asp-for="Ssid" class="control-label"></label>
+					<select asp-for="Ssid" class="form-control" asp-items="ViewBag.Ssid"></select>
+					<span asp-validation-for="Ssid" class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<input type="submit" value="Save" class="btn btn-primary" />
+					<a class="btn btn-info" asp-action="Index">Back to List</a>
+				</div>
+			</form>
+
+			@* <form asp-action="Delete">
+				<input type="hidden" asp-for="StudentId" />
+				<input type="submit" value="Delete" class="btn btn-danger" /> |
+				<a asp-action="Index">Back to List</a>
+			</form> *@
+
+
+		</div>
+	</dl>
+
 </div>
