Tiled/Table view in Student Statuses

--- a/CAA SAT/SAT.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/CAA SAT/SAT.UI.MVC/Views/Shared/_Layout.cshtml
@@ -220,7 +220,7 @@
 
 	<!-- Template Javascript -->
 	<script src="~/js/main.js"></script>
-	@RenderSectionAsync("scripts", required: false)
+	@RenderSectionAsync("scripts", false)
 
 </body>
 
