--- a/CAA SAT/SAT.UI.MVC/Views/Courses/Delete.cshtml
+++ b/CAA SAT/SAT.UI.MVC/Views/Courses/Delete.cshtml
@@ -23,35 +23,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CourseDescription)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreditHours)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreditHours)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Curriculum)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Curriculum)
-        </dd>
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Notes)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CourseId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Bonk!" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
